# superset

./: .drone.yml  .gitignore  Dockerfile  Makefile  README.md  catalog-info.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.terra/: superset.tf
.terra/celery_beat/: celery_beat.tf
.terra/celery_flower/: celery_flower.nomad.hcl  celery_flower.tf
.terra/celery_worker/: celery_worker.nomad.hcl
.terra/insights/: .terraform.lock.hcl  Makefile  superset.nomad.hcl  superset.tf  versions.tf
.terra/nomad/: superset.nomad.hcl
.terra/superset/: .terraform.lock.hcl  superset.nomad.hcl  superset.tf  versions.tf
Docker/: Dockerfile.local
bi_superset/: README.md  bi_custom_security_manager.py  superset_config.py  superset_config_local.py
bi_superset/bi_cli/: bi_cli.py  (+1 more)
config/: custom_bi_security_manager.py  custom_sso_security_manager.py  macros.py  superset_config.py  superset_config_local.py  test.py
docker/: .env-non-dev  .env.sample  docker-bootstrap.sh  docker-init.sh  run-server.sh
docs/: API-ACCESS.md  CONTRIBUTING.md  README.md  RELEASE+DEPLOY.md  TESTING.md  UPGRADING_SUPERSET.md  add-new-plugin.md
embedded/: README.md  sample.html
old/: Dockerfile  README.md
requirements/: base.in  base.txt  constraints.txt  development.in  development.txt  docker.txt  integration.in  integration.txt  testing.in  testing.txt
superset/: app.py  config.py
superset-embedded-sdk/: package-lock.json
superset-frontend/: package.json  webpack.config.js
zf_integration/: api.py  prometheus.py
zf_utils/: jwt.py  sql_annotate.py
(+116 files in other folders)
