[tool.poetry]
name = "superset-external"
version = "0.1.0"
description = ""
authors = ["zgnegrete <gnegrete@zerofox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-appbuilder = "^4.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
